fix: scrollbar width

--- a/public/styles/catalogo.scss
+++ b/public/styles/catalogo.scss
@@ -416,7 +416,7 @@ main{
             @include displayFlex($flexDirection:row);
             overflow-y: scroll;
             overflow-x: hidden;
-            scrollbar-width: 0px;
+            scrollbar-width: none;
             flex-wrap: wrap;
             gap: 20px;
             padding-top: 10px;
